# ros_pointcloud_manipulation

./: README.md
pointcloud_manipulation/: CMakeLists.txt  package.xml
pointcloud_manipulation/launch/: pointcloud_manipulation.launch
pointcloud_manipulation/src/: pointcloud_manipulation.cpp
